bug 334516 Handle the case where we have both a transaction pump and a cache pump (that is, the case when we are completing a partial cache entry): - correct the assertion - read from the cache pump when calling type sniffers (since it contains the   initial data) r+sr+a=darin